--- a/style.css
+++ b/style.css
@@ -21,10 +21,19 @@
 .arrow-left, .arrow-right {
     width: 25px;
     height: 400px;
-    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
 }
 
 .content-img{
     width: 600px;
     height: 100%;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
 }
