--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
 
 .box-img {
     width: 650px;
-    height: 400px;
+    height: 350px;
     display: flex;
     justify-content: space-between;
 }
 
 .arrow-left, .arrow-right {
     width: 25px;
-    height: 300px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,5 +35,6 @@
 
 img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
